@@ -1,3 +1,10 @@
+2013-11-19  Michał Pakuła vel Rutka  <m.pakula@samsung.com>
+
+        Unreviewed EFL and GTK build fix attempt after r159507
+
+        * CMakeLists.txt: Changed Platform/CoreIPC/DataReference.cpp to Platform/IPC/DataReference.cpp
+        * GNUmakefile.list.am: Ditto
+
 2013-11-19  Anders Carlsson  <andersca@apple.com>
 
         Move DataReference to Platform/IPC.
